graph toggling to full screen view

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,12 @@
   display: flex;
 }
 
+.singleChart {
+  width: 100vw;
+}
+
 .chart {
-  /* justify-content: space-between; */
+  justify-content: space-between;
   width: 33vw;
 }
 
