--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.chartsContainer {
-  display: flex;
-}
-
 .chart {
   justify-content: space-between;
   width: 33vw;
@@ -16,7 +12,8 @@
 .app {
   height: 100vh;
   padding: 10vh;
-  color: rgb(63, 63, 63)
+  color: rgb(63, 63, 63);
+  font-size: 1vw;
 }
 
 a {
@@ -44,7 +41,7 @@ h2 {
 }
 
 .bold {
-  text-emphasis: bold;
+  text-decoration: bold;
 }
 
 .sub-head-container {
@@ -60,23 +57,54 @@ h2 {
   margin-top: 3vh;
 }
 
-button {
-  border: none;
-  outline: rgb(160, 197, 236);
-  padding: 2vh;
-  border-radius: 10px;
-  color: rgb(63, 63, 63);
-  font-weight: bold;
-  font-size: medium;
-  width: 15vw;
-  background-color: white;
-}
-
-@media screen and (max-width:320px) {
+@media screen and (min-width:401px) {
   .chartBox * {
     background-color: rgb(247, 247, 247);
-    flex-direction: column;
+    flex-direction: row;
   }
+
+  button {
+    border: none;
+    outline: rgb(160, 197, 236);
+    padding: 2vh;
+    border-radius: 10px;
+    color: rgb(63, 63, 63);
+    font-weight: bold;
+    font-size: medium;
+    width: 15vw;
+    background-color: white;
+    font-size: 1vw;
+  }
+
+  .chartsContainer {
+    display: flex;
+    margin-bottom: 15vh;
+  }  
+}
+
+@media screen and (max-width:400px) {
+  .chartBox * {
+    background-color: rgb(247, 247, 247);
+  }
+
+  button {
+    border: none;
+    outline: rgb(160, 197, 236);
+    padding: 2vh;
+    border-radius: 10px;
+    color: rgb(63, 63, 63);
+    font-weight: bold;
+    font-size: medium;
+    width: 15vw;
+    background-color: white;
+    font-size: 2vw;
+  }
+  .chartsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }  
 }
 
 /* tomorrow to do: make mobile compatible */
