--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,10 @@ h2 {
   margin-top: 3vh;
 }
 
+.fullScreen {
+  height: 50vh;
+}
+
 @media screen and (min-width:401px) {
   .chartBox * {
     background-color: rgb(247, 247, 247);
